# alphaevolve-intel-optimization-sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.ps1
.github/workflows/: ci.yml
notebooks/: README.md
scripts/: summarize_report.py  windows_setup.ps1
src/ae_sandbox/: __init__.py  run.py
src/ae_sandbox/benchmarks/: anomaly_detection.py  entity_resolution.py  registry.py  toy_clustering.py  types.py
src/ae_sandbox/governance/: policy.py  reporting.py
src/ae_sandbox/optimizers/: evolution_loop.py
tests/: test_basic.py
